fix line spacing and post spacing

--- a/src/components/AddCommentComponent/AddCommentComponent.module.scss
+++ b/src/components/AddCommentComponent/AddCommentComponent.module.scss
@@ -1,6 +1,6 @@
 .inputBar {
   border: 1px solid #4abdac;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 5px;
 }
 
