--- a/src/components/CommunityPostComponent/CommunityPostComponent.module.scss
+++ b/src/components/CommunityPostComponent/CommunityPostComponent.module.scss
@@ -5,15 +5,22 @@
   padding: 5px;
   color: #444444;
   font-size: 12px;
+  line-height: 1.6;
+  margin-top: 10px;
+
+  .postHeader {
+    color: #fc4a1a;
+    font-size: 15px;
+    font-weight: bold;
+  }
 }
 
-h3 {
-  color: #fc4a1a;
-  font-size: 15px;
+.postedBy {
+  font-weight: bold;
 }
 
 button {
-  border-radius: 10px;
+  border-radius: 5px;
   border-color: #4abdac;
   font-family: "M PLUS Rounded 1c", sans-serif;
 }
